--- a/index.html
+++ b/index.html
@@ -211,6 +211,13 @@
       }
     }
   </style>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CYKFB1BGKC"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-CYKFB1BGKC');
+    </script>
 </head>
 <body>
 <nav>
